--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
   <body>
     <form action="/" method="post" class="container">
       <div>
-        <label for="todo"> Please Enter what you want to do</label>
+        <label for="todo"> <%- title %></label>
         <br />
         <input type="text" name="todo" />
         <br />
@@ -29,4 +29,4 @@
       crossorigin="anonymous"
     ></script>
   </body>
-</html> -->
+</html>
