database is fully integrated with the app

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
       </div>
       <div class="list">
         <% items.forEach(function(item){ %>
-        <div><input type="checkbox"><%- item %></input></div>
+        <div><input type="checkbox"><%- item.name %></input></div>
         <% }) %>
       </div>
     </form>
